tests/fixtures/errors/sqrt_negative.ksr
node y: Dimensionless = sqrt(-1.0);
